<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Add_Name"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.eae.kipper.jung.gabriel.mitgliederverwaltung.Update">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Input_Text_Label_Name">

                <EditText
                    android:id="@+id/Update_Text_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/hint_name"
                    android:ems="10" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Input_Text_Label_Numemr_Privat">

                <EditText
                    android:id="@+id/Update_Text_Nummer_Privat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/hint_nummer_privat"
                    android:ems="10" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Input_Text_Label_Numemr_Mobil">

                <EditText
                    android:id="@+id/Update_Text_Nummer_Mobil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/hint_nummer_mobil"
                    android:ems="10" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Input_Text_Label_Email">

                <EditText
                    android:id="@+id/Update_Text_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_email"
                    android:ems="10" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Input_Text_Label_Strasse">

                <EditText
                    android:id="@+id/Update_Text_Strasse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/hint_strasse"
                    android:ems="10" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Input_Text_Label_Plz">

                <EditText
                    android:id="@+id/Update_Text_Plz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/hint_plz"
                    android:ems="10" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Input_Text_Label_Ort">

                <EditText
                    android:id="@+id/Update_Text_Ort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/hint_ort"
                    android:ems="10" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/text_mitgliederstatus"
                    android:textColorHint="@color/lightgrey"
                    android:ems="10"
                    android:textSize="18sp"
                    android:layout_weight="1" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <RadioButton
                        android:text="@string/text_aktiv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rb_aktiv"
                        android:layout_weight="1"
                        android:ems="10"
                        android:textSize="18sp"
                        android:textColor="@color/lightgrey"
                        android:checked="true"/>

                    <RadioButton
                        android:text="@string/text_passiv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rb_passiv"
                        android:layout_weight="1"
                        android:ems="10"
                        android:textSize="18sp"
                        android:textColor="@color/lightgrey" />

                </RadioGroup>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/foating_update"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_save"
        app:elevation="5dp"
        app:backgroundTint="#FF5722"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        app:borderWidth="0dp"
        app:rippleColor="#bf360c" />
</RelativeLayout>
