<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.eae.kipper.jung.gabriel.mitgliederverwaltung.Details">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:useDefaultMargins="true">

        <TextView
            android:text="@string/label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Label_Text_Name"
            android:layout_column="0"
            android:layout_row="0"
            android:gravity="right|center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Text_Name"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_gravity="fill_horizontal"
            android:textSize="16dp"
            android:background="@drawable/textview_border" />

        <TextView
            android:text="@string/label_nummer_privat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Label_Text_Nummer_Privat"
            android:layout_column="0"
            android:layout_row="2"
            android:gravity="right|center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Text_Nummer_Privat"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_gravity="fill_horizontal"
            android:textSize="16dp"
            android:background="@drawable/textview_border" />

        <TextView
            android:text="@string/label_nummer_mobil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Label_Text_Nummer_Mobil"
            android:layout_column="0"
            android:layout_row="3"
            android:gravity="right|center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Text_Nummer_Mobil"
            android:layout_column="1"
            android:layout_row="3"
            android:layout_gravity="fill_horizontal"
            android:textSize="16dp"
            android:background="@drawable/textview_border" />

        <TextView
            android:text="@string/label_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Label_Text_Email"
            android:layout_column="0"
            android:layout_row="4"
            android:gravity="right|center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Text_Email"
            android:layout_column="1"
            android:layout_row="4"
            android:layout_gravity="fill_horizontal"
            android:textSize="16dp"
            android:background="@drawable/textview_border" />

        <TextView
            android:text="@string/label_strasse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Label_Text_Strasse"
            android:layout_column="0"
            android:layout_row="5"
            android:gravity="right|center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Text_Strasse"
            android:layout_column="1"
            android:layout_row="5"
            android:layout_gravity="fill_horizontal"
            android:textSize="16dp"
            android:background="@drawable/textview_border" />

        <TextView
            android:text="@string/label_plz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Label_Text_Plz"
            android:layout_column="0"
            android:layout_row="6"
            android:gravity="right|center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Text_Plz"
            android:layout_column="1"
            android:layout_row="6"
            android:layout_gravity="fill_horizontal"
            android:textSize="16dp"
            android:background="@drawable/textview_border" />

        <TextView
            android:text="@string/label_ort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Label_Text_Ort"
            android:layout_column="0"
            android:layout_row="7"
            android:gravity="right|center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Text_Ort"
            android:layout_column="1"
            android:layout_row="7"
            android:layout_gravity="fill_horizontal"
            android:textSize="16dp"
            android:background="@drawable/textview_border" />
    </GridLayout>
</ScrollView>
